// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Disabled variants should render disabled button component contained 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 42,
      "shadowColor": "#AEAEAE",
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Disabled variants should render disabled button component outlined 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  style={
    Object {
      "borderColor": "#FAFAEA",
      "borderRadius": 42,
      "borderWidth": 1,
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Disabled variants should render disabled button component text 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  style={
    Object {
      "borderRadius": 42,
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component contained 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 42,
      "shadowColor": "#AEAEAE",
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component outlined 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "borderColor": "#FFFFFF",
      "borderRadius": 42,
      "borderWidth": 1,
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component text 1`] = `
<TouchableHighlight
  accessibilityRole="button"
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  style={
    Object {
      "borderRadius": 42,
    }
  }
  testID="button"
  underlayColor="#BABABA"
>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;
